--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="Contact.css">
 <head>
@@ -12,7 +12,7 @@
     <ul>
       <li><a href = "Contact.html">Contact</a></li>
       <li><a href = "CV.html">CV</a></li>
-      <li><a href = "Introduction.html">Home</a></li>
+      <li><a href = "index.html">Home</a></li>
 
 </ul>
 </body>
