--- a/CV.html
+++ b/CV.html
@@ -32,7 +32,7 @@
     <ul>
       <li><a href = "Contact.html">Contact</a></li>
       <li><a href = "CV.html">CV</a></li>
-      <li><a href = "Introduction.html">Home</a></li>
+      <li><a href = "index.html">Home</a></li>
 
 </ul>
 </body>
